--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">HelloWorld</string>
-    <string name="strButtonCaption">Click Here!</string>
-    <string name="strMessage">Hello!</string>
+    <string name="app_name">Bonjour World</string>
+    <string name="strButtonCaption">Appuyez moi</string>
+    <string name="strMessage">Bonjour!!</string>
+    <string name="strSecondButtonCaption">Appuyez me seconde</string>
 </resources>
